# daystudylib

./: Cargo.toml  README.md
.cargo/: config.toml
criterion/: Cargo.toml  README.md  build.rs
criterion/.cargo/: config.toml
criterion/benches/: benchmark.rs  my_benchmark.rs
criterion/src/: lib.rs  main.rs  x86_64.rs
data/: cities.csv
dora/: READ.MD
dora/py/conversation_py/listener-1/: README.md  pyproject.toml
dora/py/conversation_py/listener-1/listener_1/: main.py
dora/py/conversation_py/listener-1/tests/: test_listener_1.py
dora/py/conversation_py/talker-1/: README.md  pyproject.toml
dora/py/conversation_py/talker-1/talker_1/: main.py
dora/py/conversation_py/talker-1/tests/: test_talker_1.py
dora/py/conversation_py/talker-2/: README.md  pyproject.toml
dora/py/conversation_py/talker-2/talker_2/: main.py
dora/py/conversation_py/talker-2/tests/: test_talker_2.py
dora/py/opencv/: dataflow.yml
dora/py/opencv/show/: detection.py  main.py
dora/py/opencv/show/ob/: color_viewer.py  depth_color_sync_align_viewer.py  main.py
dora/rs/conversation_py/listener_1/: Cargo.toml
dora/rs/conversation_py/talker_1/: Cargo.toml
dora/rs/conversation_py/talker_2/: Cargo.toml
indxmap/: Cargo.toml
indxmap/src/: main.rs
myfs/: Cargo.toml
myfs/src/: main.rs
myplotlars/: Cargo.toml
myplotlars/src/: main.rs
mytest/src/: main.rs
mytokio/: Cargo.toml
mytokio/src/: main.rs
myxl/: Cargo.toml
myxl/src/: main.rs
once/: Cargo.toml
once/src/: main.rs
web/: Cargo.toml
web/src/: main.rs  multipart_form.rs  sse.rs  stream_file.rs  templates.rs
xtask/src/: main.rs
