[workspace]
members = [ "myfs", "myxl", "once",
    "xtask"
    ]
path=[
    "./xtask",
    "./once"
]
resolver = "2"
[workspace.dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4.31"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"