[workspace]
members = [ "criterion", "myfs", "myxl", "once", "web",
    "xtask"
    ]
path=[
    "./xtask",
    "./once",
    "./web",
]
resolver = "2"
[workspace.dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4.31"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
headers = "0.4"
# axum-extra = {version = "0.9.3", features = ["typed-header"] }