[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace=true
futures.workspace=true
tokio.workspace=true
tower.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
axum-extra = {version = "0.9.3", features = ["typed-header"] }
tokio-stream.workspace=true
headers.workspace=true
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3.12"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }