[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace=true
tokio.workspace=true
tower.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
axum-extra = {version = "0.9.3", features = ["typed-header"] }
axum = { version = "0.7.5", features = ["ws","multipart"] }
tokio-stream.workspace=true
headers.workspace=true
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
sonic-rs = "0.3.12"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }